# otocyon

./: .editorconfig  Cargo.toml  dev.env  readme.md
api/: Cargo.toml
api/src/: crm_handlers.rs  lib.rs
application/: Cargo.toml
application/src/: lib.rs
application/src/apideck_crm/: companies_handler.rs  mod.rs
domain/: Cargo.toml
domain/src/: models.rs
infrastructure/: Cargo.toml
shared/: Cargo.toml
shared/src/: lib.rs  request_helpers.rs  response_models.rs
src/: main.rs  types.rs
src/companies/: delete_company.rs  get_companies.rs  get_company.rs  mod.rs  update_company.rs
src/crm/: mod.rs
src/crm/activities/: _formatters.rs  _types.rs  delete_activities.rs  get_activities.rs  get_activity.rs  mod.rs  post_activity.rs  update_activity.rs
src/crm/companies/: _formatters.rs  _types.rs  get_companies.rs  get_company.rs
src/crm/contacts/: _formatters.rs  _types.rs  get_contact.rs  get_contacts.rs  post_contact.rs  update_contact.rs
src/crm/leads/: _formatters.rs  _types.rs  get_lead.rs  get_leads.rs  mod.rs  post_lead.rs
src/crm/notes/: _formatters.rs  _types.rs  delete_notes.rs  get_note.rs  get_notes.rs  mod.rs  post_note.rs  update_note.rs
src/crm/opportunities/: _formatters.rs  _types.rs  delete_opportunities.rs  get_opportunities.rs  get_opportunity.rs  mod.rs  post_opportunity.rs  update_opportunity.rs
src/crm/pipelines/: _formatters.rs  _types.rs  delete_pipelines.rs  get_pipeline.rs  get_pipelines.rs  mod.rs
src/crm/users/: _formatters.rs  _types.rs  delete_users.rs  get_user.rs  get_users.rs  post_user.rs
src/errors/: controller_errors.rs  mod.rs
src/prism_crm/: crm_types.rs  mod.rs  types.rs
src/prism_crm/companies/: _formatters.rs  _types.rs  company_types.rs  delete_companies.rs  delete_company.rs  formatters.rs  get_companies.rs  get_company.rs  mod.rs  post_company.rs  update_company.rs
src/prism_crm/contacts/: _formatters.rs  _types.rs  contact_types.rs  delete_contact.rs  delete_contacts.rs  formatters.rs  get_contact.rs  get_contacts.rs  mod.rs  post_contact.rs  update_contact.rs
src/prism_crm/leads/: _formatters.rs  _types.rs  delete_lead.rs  delete_leads.rs  formatters.rs  get_lead.rs  get_leads.rs  lead_types.rs  mod.rs  update_lead.rs
src/prism_crm/opportunities/: _formatters.rs  _types.rs  delete_opportunity.rs  formatters.rs  get_opportunities.rs  get_opportunity.rs  mod.rs  opp_types.rs  post_opportunity.rs  update_opportunity.rs
src/prism_crm/pipelines/: _types.rs  delete_pipeline.rs  formatters.rs  get_pipeline.rs  get_pipelines.rs  mod.rs  (+3 more)
src/service/: env.rs  format_money.rs  format_phone.rs  formatters.rs  header_management.rs  middlewares.rs  mod.rs  redis.rs  redix.rs  req_client.rs  service_logger.rs  toss_request.rs
src/vault/: _formatters.rs  _types.rs  get_connections.rs  mod.rs
(+10 files in other folders)
