[package]
name = "prism_api"
version = "0.1.0"
edition = "2021"

[[bin]]
edition = "2021"
name = "prism_api"
path = "src/main.rs"

[dependencies]
actix-web = "4.3.1"
actix-service = "2.0.2"
actix-cors = "0.6.4"
actix = "0.13.0"
actix-web-prometheus = { version = "0.1.2", features = ["process"] }
tokio = { version = "1.28.2", features = ["full"] }
dotenvy = "0.15.7"
serde_json = "1.0.96"
serde_derive = "1.0.163"
serde = { version = "1.0.164", features = ["serde_derive"] }
openssl = "0.10.55"
jsonwebtoken = "8.3.0"
env_logger = "0.10.0"
chrono = { version = "0.4.24", features = ["serde"] }
