[package]
name = "prism_api"
version = "0.1.0"
edition = "2021"

[[bin]]
edition = "2021"
name = "prism_api"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-service = "2"
actix-cors = "0.6"
actix = "0.13"
actix-web-prometheus = { version = "0.1", features = ["process"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
serde_json = "1"
serde_derive = "1"
serde = { version = "1", features = ["serde_derive"] }
openssl = "0.10"
jsonwebtoken = "8"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
log = { version = "0.4", features = ["std", "serde"] }
awc = { version = "3", features = ["openssl"] }
actix-rt = "2"
url-match = "0.1.7"
futures = "0.3.28"
serde_with = "3.4.0"
rusty-money = { version = "0.4.0", features = ["iso"] }
num-format = "0.4.4"
redis = { version = "0.23.3", features = [
    "tokio-comp",
    "tokio-native-tls-comp",
    "json",
] }
