[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
shared = { path = "../shared" }

reqwest = "0.11"
serde_json = "1.0.88"
tokio = { version = "1.33", features = ["full"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
