[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
shared = { path = "../shared" }

serde_json = "1.0.88"
rocket = "0.5.0-rc.3"
reqwest = "0.11.22"
dotenvy = "0.15"
tokio = { version = "1.33", features = ["full"] }
