[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }

reqwest = "0.11"
dotenvy = "0.15"
serde = { version = "1.0.147", features = ["derive"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
